--- a/frontend/src/layouts/modules/MessageBoxModule/style.module.scss
+++ b/frontend/src/layouts/modules/MessageBoxModule/style.module.scss
@@ -9,7 +9,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: rgba(127, 127, 127, 0.618);
+    background-color: rgba(233, 233, 233, 0.618);
 
     &.transaction-active {
       transition: opacity 0.3s ease;
@@ -40,7 +40,8 @@
     }
 
     > .box {
-      background-color: $deep-sidebar;
+      background-color: $white;
+      border: solid 1px $more-deep-light;
       border-radius: $radius-size-large;
       text-align: center;
       padding: 0.5rem;
@@ -77,7 +78,8 @@
     }
     .box-framework {
       > .box {
-        background-color: $deep-sidebar-dm;
+        background-color: $dark;
+        border-color: $more-shallow-dark;
         > .title {
           color: $white;
         }
