--- a/frontend/src/styles/components/button.sass
+++ b/frontend/src/styles/components/button.sass
@@ -35,12 +35,12 @@ button
 
 
 
-$button-size-map: ("small" ($font-size-8, $height-small, 0.8rem), "medium" ($font-size-6, $height-medium, 1.1rem))
+$button-size-map: ("small" ($font-size-8, $height-small, 0.9em), "medium" ($font-size-6, $height-medium, 1.3rem))
 
 .button
   font-size: $font-size-7
   height: $height-std
-  padding: 0 1rem
+  padding: 0 1.1em
   box-sizing: border-box
   border-radius: $radius-size-std
   vertical-align: top
