前端: 接入一部分右键菜单功能; 完成add on filter的核心功能逻辑

--- a/frontend/src/styles/components/input.sass
+++ b/frontend/src/styles/components/input.sass
@@ -49,6 +49,9 @@ textarea
     &.is-width-#{$name}
       width: #{$size * 13.6}
       max-width: #{$size * 13.6}
+  @each $name, $size in $radius-size-map
+    &.radius-#{$name}
+      border-radius: $size
   @media (prefers-color-scheme: light)
     @each $name, $pair in $colors
       $color: nth($pair, 1)
