--- a/frontend/src/styles/components/icon.sass
+++ b/frontend/src/styles/components/icon.sass
@@ -16,5 +16,7 @@
   .icon:last-child:not(:first-child)
     margin-left: 0.35rem
     margin-right: -0.1rem
+  .icon
+      margin-top: 0.1rem
   &.is-small .icon
     margin-top: 0.15rem
