--- a/frontend/src/styles/components/tag.sass
+++ b/frontend/src/styles/components/tag.sass
@@ -23,6 +23,10 @@
 
   .tag-button
     color: inherit
+    &:hover
+      transform: scale(1.1, 1.1)
+    &:active
+      transform: scale(0.9, 0.9)
     &:not(:first-child)
       margin-left: $spacing-1
     &:not(:last-child)
