前端: 添加add on的副菜单; 整理接入代码

--- a/frontend/src/styles/components/button.sass
+++ b/frontend/src/styles/components/button.sass
@@ -44,7 +44,7 @@ $button-size-map: ("small" ($font-size-8, $height-small, 0.9em), "medium" ($font
   box-sizing: border-box
   border-radius: $radius-size-std
   vertical-align: top
-  line-height: 1.2
+  //line-height: 1.2
 
   background-color: $sidebar
   &:hover
