--- a/frontend/src/styles/components/icon.sass
+++ b/frontend/src/styles/components/icon.sass
@@ -17,6 +17,4 @@
     margin-left: 0.35rem
     margin-right: -0.1rem
   .icon
-      margin-top: 0.1rem
-  &.is-small .icon
-    margin-top: 0.15rem
+    padding-top: 0.1em
