前端: 完成add on中topic的搜索筛选功能框

--- a/frontend/src/styles/layouts/middle-layout.sass
+++ b/frontend/src/styles/layouts/middle-layout.sass
@@ -14,7 +14,7 @@
         flex-wrap: nowrap
         align-items: center
 
-        min-width: 4rem
+        min-width: 2rem
 
         &:first-child
             justify-content: flex-start
@@ -27,7 +27,6 @@
 
         > *
             flex: 0 0 auto
-            &.is-shrink-item
+            &.is-stretch-item
                 flex-shrink: 1
-            &.is-grow-item
                 flex-grow: 1
