--- a/frontend/src/layouts/editor-components/TopicEditor.module.scss
+++ b/frontend/src/layouts/editor-components/TopicEditor.module.scss
@@ -18,7 +18,7 @@
       > .scroll-content {
         overflow-y: auto;
         max-height: 16rem;
-        padding: 0 0.25rem 0.25rem 0.25rem;
+        padding: 0 0 0.25rem 0;
       }
     }
 
@@ -26,7 +26,7 @@
       > .scroll-content {
         overflow-y: auto;
         max-height: 16rem;
-        padding: 0 0.25rem 0.25rem 0.25rem;
+        padding: 0 0 0.25rem 0;
 
         > .item {
           padding: 0.125rem 0 0.125rem 0.25rem;
