--- a/frontend/src/styles/layouts/middle-layout.sass
+++ b/frontend/src/styles/layouts/middle-layout.sass
@@ -15,6 +15,8 @@
         align-items: center
 
         min-width: 2rem
+        &:not(:empty)
+            min-width: 8rem
 
         &:first-child
             justify-content: flex-start
