--- a/frontend/src/styles/components/block.sass
+++ b/frontend/src/styles/components/block.sass
@@ -58,3 +58,17 @@
               border-color: $color-dark
       &.has-border-#{$name}
         border: solid 1px $color
+
+.popup-block
+  border-radius: $radius-size-std
+  position: relative
+  box-sizing: border-box
+  overflow: hidden
+  @media (prefers-color-scheme: light)
+    background-color: $bg
+    color: $literal
+    border: solid 1px $more-deep-light
+  @media (prefers-color-scheme: dark)
+    background-color: $bg-dm
+    color: $literal-dm
+    border: solid 1px $more-shallow-dark
