前端: 添加tag list页面与detail页面的大部分显示逻辑

--- a/frontend/src/styles/components/group.sass
+++ b/frontend/src/styles/components/group.sass
@@ -3,7 +3,8 @@
 .group
   > input,
   > button,
-  > a
+  > a,
+  > span
     margin-bottom: $spacing-1
     display: inline-block
     vertical-align: super
@@ -13,7 +14,8 @@
 .single-line-group
   > input,
   > button,
-  > a
+  > a,
+  > span
     display: inline-block
     vertical-align: super
     &:not(:last-child)
