--- a/frontend/src/layouts/layouts/SplitPane/style.module.scss
+++ b/frontend/src/layouts/layouts/SplitPane/style.module.scss
@@ -39,6 +39,7 @@
   }
   > .main-content {
     overflow-y: auto;
+    box-sizing: border-box;
     padding-top: $main-padding-top;
     padding-left: $spacing-3;
     padding-right: $spacing-3;
