--- a/frontend/src/views/Main/Tags/style.module.scss
+++ b/frontend/src/views/Main/Tags/style.module.scss
@@ -10,12 +10,13 @@
   box-sizing: border-box;
 
   .root-node {
+    margin-bottom: 0.25rem;
     > .expanded-box {
       //列表区域的展开收起动画
       @mixin expand-transition-state($e) {
-        transition: max-height 0.25s $e;
+        transition: max-height 0.15s $e;
         overflow: hidden;
-        max-height: 250px;
+        max-height: 150px;
       }
       &.expand-transition-enter-active {
         @include expand-transition-state(ease-in);
@@ -65,7 +66,6 @@
   .meta {
     margin-left: 0.25rem;
     margin-top: 0.75rem;
-    > p { margin-top: 0.5rem; }
   }
   .separator {
     margin-top: 0.75rem;
@@ -81,7 +81,7 @@
     padding: 0.75rem;
   }
   .links {
-    margin-top: 0.75rem;
+    margin-top: 1rem;
     > p:not(:last-child) {
       margin-bottom: 0.25rem;
     }
@@ -91,22 +91,24 @@
   }
   .examples {
     margin-top: 1rem;
-    display: flex;
-    flex-wrap: wrap;
-    > .example {
-      position: relative;
-      height: 0;
-      width: 100%;
-      padding-bottom: 66.7%;
-      margin-bottom: 0.25rem;
-      > img {
-        position: absolute;
-        border-radius: 6px;
-        top: 0; left: 0;
+    .example-list {
+      display: flex;
+      flex-wrap: wrap;
+      > .example {
+        position: relative;
+        height: 0;
         width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: 50% 50%;
+        padding-bottom: 66.7%;
+        margin-bottom: 0.25rem;
+        > img {
+          position: absolute;
+          border-radius: 6px;
+          top: 0; left: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: 50% 50%;
+        }
       }
     }
   }
