--- a/frontend/src/styles/base/color.scss
+++ b/frontend/src/styles/base/color.scss
@@ -176,30 +176,30 @@ $colors-dark-mode: (
         "shallow-dark" ($deep-light, $shallow-dark),
         "more-shallow-dark" ($more-deep-light, $more-shallow-dark),
         "deep-dark" ($white, $deep-dark),
-        "cyan" ($cyan, $cyan-invert, $cyan-light, $cyan-dark),
-        "lightgreen" ($lightgreen, $lightgreen-invert, $lightgreen-light, $lightgreen-dark),
-        "green" ($green, $green-invert, $green-light, $green-dark),
-        "teal" ($teal, $teal-invert, $teal-light, $teal-dark),
-        "blue" ($blue, $blue-invert, $blue-light, $blue-dark),
-        "skyblue" ($skyblue, $skyblue-invert, $skyblue-light, $skyblue-dark),
-        "bluepurple" ($bluepurple, $bluepurple-invert, $bluepurple-light, $bluepurple-dark),
-        "yellow" ($yellow, $yellow-invert, $yellow-light, $yellow-dark),
-        "orange" ($orange, $orange-invert, $orange-light, $orange-dark),
-        "red" ($red, $red-invert, $red-light, $red-dark),
-        "pink" ($pink, $pink-invert, $pink-light, $pink-dark),
-        "deeppink" ($deeppink, $deeppink-invert, $deeppink-light, $deeppink-dark),
-        "purple" ($purple, $purple-invert, $purple-light, $purple-dark),
-        "tea" ($tea, $tea-invert, $tea-light, $tea-dark),
-        "brown" ($brown, $brown-invert, $brown-light, $brown-dark),
+        "cyan" ($cyan, $cyan-invert, $cyan-dark, $cyan-light),
+        "lightgreen" ($lightgreen, $lightgreen-invert, $lightgreen-dark, $lightgreen-light),
+        "green" ($green, $green-invert, $green-dark, $green-light),
+        "teal" ($teal, $teal-invert, $teal-dark, $teal-light),
+        "blue" ($blue, $blue-invert, $blue-dark, $blue-light),
+        "skyblue" ($skyblue, $skyblue-invert, $skyblue-dark, $skyblue-light),
+        "bluepurple" ($bluepurple, $bluepurple-invert, $bluepurple-dark, $bluepurple-light),
+        "yellow" ($yellow, $yellow-invert, $yellow-dark, $yellow-light),
+        "orange" ($orange, $orange-invert, $orange-dark, $orange-light),
+        "red" ($red, $red-invert, $red-dark, $red-light),
+        "pink" ($pink, $pink-invert, $pink-dark, $pink-light),
+        "deeppink" ($deeppink, $deeppink-invert, $deeppink-dark, $deeppink-light),
+        "purple" ($purple, $purple-invert, $purple-dark, $purple-light),
+        "tea" ($tea, $tea-invert, $tea-dark, $tea-light),
+        "brown" ($brown, $brown-invert, $brown-dark, $brown-light),
         //主题色
         "bg" ($bg-dm, $bg),
         "shallow-bg" ($shallow-bg-dm, $shallow-bg),
         "literal" ($literal-dm, $literal),
         "sidebar" ($sidebar-dm, $sidebar),
         "deep-sidebar" ($deep-sidebar-dm, $deep-sidebar),
-        "success" ($lightgreen, $lightgreen-invert, $lightgreen-light, $lightgreen-dark),
-        "info" ($blue, $blue-invert, $blue-light, $blue-dark),
-        "link" ($bluepurple, $bluepurple-invert, $bluepurple-light, $bluepurple-dark),
-        "warning" ($yellow, $yellow-invert, $yellow-light, $yellow-dark),
-        "danger" ($red, $red-invert, $red-light, $red-dark),
+        "success" ($lightgreen, $lightgreen-invert, $lightgreen-dark, $lightgreen-light),
+        "info" ($blue, $blue-invert, $blue-dark, $blue-light),
+        "link" ($bluepurple, $bluepurple-invert, $bluepurple-dark, $bluepurple-light),
+        "warning" ($yellow, $yellow-invert, $yellow-dark, $yellow-light),
+        "danger" ($red, $red-invert, $red-dark, $red-light),
 );
