--- a/frontend/src/views/Main/Authors/ListPanel/style.module.scss
+++ b/frontend/src/views/Main/Authors/ListPanel/style.module.scss
@@ -1,8 +1,8 @@
-
+@import '@/styles/base/size.sass';
 
 .item {
   width: 100%;
-  height: 96px;
+  height: 74px;
   margin-bottom: 6px;
   padding: 1rem;
 
@@ -13,5 +13,14 @@
   }
   > .right {
     width: 60%;
+
+    > .ank-list {
+      line-height: $height-std;
+      width: 100%;
+      height: 100%;
+      overflow-y: hidden;
+      overflow-x: auto;
+      white-space: nowrap;
+    }
   }
 }
