--- a/frontend/src/views/Main/Tags/style.module.scss
+++ b/frontend/src/views/Main/Tags/style.module.scss
@@ -78,7 +78,14 @@
     }
   }
   .description {
+    position: relative;
     padding: 0.75rem;
+    > .edit {
+      position: absolute;
+      right: 0.4rem;
+      bottom: 0.3rem;
+      font-size: $font-size-small;
+    }
   }
   .links {
     margin-top: 1rem;
@@ -108,6 +115,7 @@
           height: 100%;
           object-fit: cover;
           object-position: 50% 50%;
+          box-shadow: 0.1em 0.1em 0.25em rgba(0, 0, 0, 0.1);
         }
       }
     }
