前端: 完成tag拖拽移动功能

--- a/frontend/src/styles/components/tag.sass
+++ b/frontend/src/styles/components/tag.sass
@@ -4,6 +4,7 @@
 .tag
   align-items: center
   justify-content: center
+  position: relative
   display: inline-flex
   white-space: nowrap
   background-color: $light
