--- a/frontend/src/layouts/layouts/SplitPane/style.module.scss
+++ b/frontend/src/layouts/layouts/SplitPane/style.module.scss
@@ -38,11 +38,14 @@
     top: 0;
   }
   > .main-content {
-    overflow-y: auto;
     box-sizing: border-box;
     padding-top: $main-padding-top;
     padding-left: $spacing-3;
     padding-right: $spacing-3;
-    max-height: 100%;
+    height: 100%;
+
+    &.overflow {
+      overflow-y: auto;
+    }
   }
 }
