feat(frontend/detail-view): 添加侧边栏tab框架

--- a/frontend/src/styles/components/icon.sass
+++ b/frontend/src/styles/components/icon.sass
@@ -1,7 +1,7 @@
 @import "../base/size"
 
-//图标
-.icon
+//图标, //不触发附带效果的图标
+.icon, .idp-icon
   display: inline-block
   align-items: center
   min-width: 1em
@@ -16,5 +16,5 @@
   .icon:last-child:not(:first-child)
     margin-left: 0.35rem
     margin-right: -0.1rem
-  .icon
+  .icon, .idp-icon
     padding-top: 0.1em
