--- a/frontend/src/views/Main/ViewStacks/ImageDetailView/style.module.scss
+++ b/frontend/src/views/Main/ViewStacks/ImageDetailView/style.module.scss
@@ -17,51 +17,95 @@
   }
 }
 
+.file-info-panel {
+  > .thumbnail {
+    text-align: center;
+    > img {
+      width: 100%;
+      min-height: 4.5rem;
+      max-height: 16rem;
+      object-fit: contain;
+      object-position: center;
+      border-radius: $radius-size-std;
+      border: solid 1px $deep-sidebar;
+      @media (prefers-color-scheme: dark) {
+        border-color: $deep-sidebar-dm;
+      }
+      box-sizing: border-box;
+    }
+  }
+}
+
+.origin-data-panel {
+  > .source-tag {
+    > .tag {
+      margin-top: 0.125rem;
+    }
+  }
+  > .no-origin-data {
+    text-align: center;
+    color: $grey;
+  }
+}
+
 .related-items-panel {
   > .albums {
-    margin-bottom: 0.25rem;
-
     > .album {
-      border-radius: 3px;
+      margin-top: 0.25rem;
+      border-radius: $radius-size-std;
       border: solid 1px $deep-sidebar;
       @media (prefers-color-scheme: dark) {
         border-color: $deep-sidebar-dm;
       }
       text-align: center;
-      margin-top: 0.25rem;
       padding: 0.125em;
     }
   }
   > .collection {
-    margin-bottom: 0.25rem;
-
+    margin-top: 0.25rem;
     > .image {
       margin-top: 0.25rem;
-      margin-bottom: 0.25rem;
+      text-align: center;
       position: relative;
-      height: 0;
-      width: 100%;
-      padding-bottom: 75%;
       > img {
-        position: absolute;
-        border-radius: 6px;
-        top: 0; left: 0;
         width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: 50% 50%;
-        box-shadow: 0.1em 0.1em 0.25em rgba(0, 0, 0, 0.05);
+        min-height: 4rem;
+        max-height: 12rem;
+        object-fit: contain;
+        object-position: center;
+        border-radius: $radius-size-std;
+        border: solid 1px $deep-sidebar;
+        @media (prefers-color-scheme: dark) {
+          border-color: $deep-sidebar-dm;
+        }
+        box-sizing: border-box;
+      }
+      > .num-tag {
+        position: absolute;
+        right: 0.35rem;
+        top: 0.35rem;
+        opacity: 75%;
+        border-radius: $radius-size-std;
+        > i {
+          margin-right: 0.25rem;
+        }
       }
     }
   }
   > .associate {
     > .images {
-      //列数
-      $column-number: 2;
       margin-top: 0.25rem;
+      padding: 0.25rem 0 0 0.25rem;
+      border-radius: $radius-size-std;
+      border: solid 1px $deep-sidebar;
+      @media (prefers-color-scheme: dark) {
+        border-color: $deep-sidebar-dm;
+      }
+
+      //列数
+      $column-number: 3;
       display: flex;
       flex-wrap: wrap;
-      margin-right: #{-$spacing-1};
       > .image {
         position: relative;
         height: 0;
@@ -69,10 +113,10 @@
         padding-bottom: #{percentage(1 / $column-number)};
         > img {
           position: absolute;
-          border-radius: 6px;
+          border-radius: $radius-size-small;
           top: 0; left: 0;
-          width: calc(100% - #{$spacing-1});
-          height: calc(100% - #{$spacing-1});
+          width: calc(100% - 0.25rem);
+          height: calc(100% - 0.25rem);
           object-fit: cover;
           object-position: 50% 50%;
           box-shadow: 0.1em 0.1em 0.25em rgba(0, 0, 0, 0.05);
@@ -81,6 +125,11 @@
     }
     > .more {
       float: right;
+      font-size: $font-size-small;
     }
+  }
+  > .no-any-related {
+    text-align: center;
+    color: $grey;
   }
 }
