--- a/frontend/src/views/Main/ViewStacks/ImageDetailView/style.module.scss
+++ b/frontend/src/views/Main/ViewStacks/ImageDetailView/style.module.scss
@@ -1,14 +1,16 @@
 @import '@/styles/base/color.scss';
 @import '@/styles/base/size.sass';
 
+.top-bar-content {
+  .navigator-content {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+    min-width: 4rem;
+    text-align: center;
+  }
+}
+
 .detail-info-panel {
-  > .description {
-    margin-top: 0.5rem;
-  }
-  > .score {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-  }
   > .meta-tag {
     margin-top: 0.125rem;
     > div {
