feat(frontend/detail-view): 添加zoom控制; 添加video播放及一部分组件

--- a/frontend/src/views/Main/ViewStacks/ImageDetailView/style.module.scss
+++ b/frontend/src/views/Main/ViewStacks/ImageDetailView/style.module.scss
@@ -8,6 +8,23 @@
     min-width: 4rem;
     text-align: center;
   }
+  .zoom {
+    position: relative;
+    > .zoom-picker {
+      left: 50%;
+      transform: translate(-50%, 1px);
+      z-index: 1;
+      position: absolute;
+      display: flex;
+      flex-wrap: nowrap;
+      > .number {
+        line-height: $height-std;
+        min-width: 1.5rem;
+        margin: 0 0.25rem;
+        align-items: center;
+      }
+    }
+  }
 }
 
 .detail-info-panel {
