feat(frontend/dashboard): 完成image图像展示组件功能

--- a/frontend/src/views/Main/ViewStacks/ImageDetailView/style.module.scss
+++ b/frontend/src/views/Main/ViewStacks/ImageDetailView/style.module.scss
@@ -9,7 +9,23 @@
     text-align: center;
   }
   .zoom {
-    position: relative;
+    display: flex;
+    flex-wrap: nowrap;
+    > button {
+      width: 3.5rem;
+      padding: 0;
+      > :global(.idp-icon) {
+        margin-right: 0.25rem;
+      }
+      > .zoomValue {
+        display: inline-block;
+        text-align: center;
+        min-width: 1rem;
+      }
+    }
+    > .zoom-bar {
+
+    }
     > .zoom-picker {
       left: 50%;
       transform: translate(-50%, 1px);
