--- a/frontend/src/layouts/data/Dashboard/style.module.scss
+++ b/frontend/src/layouts/data/Dashboard/style.module.scss
@@ -5,11 +5,11 @@
   width: 100%; height: 100%;
   overflow: auto;
   > .image-container {
+    $transition-time: 0.15s;
+    transition: margin-top $transition-time, margin-left $transition-time, width $transition-time, height $transition-time;
     > img {
       width: 100%;
       height: 100%;
-      object-fit: contain;
-      object-position: center;
     }
   }
 }
