feat(frontend/detail-view): 添加一部分originData修改功能

--- a/frontend/src/layouts/topbar-components/ZoomController.module.scss
+++ b/frontend/src/layouts/topbar-components/ZoomController.module.scss
@@ -18,6 +18,7 @@
   > .zoom-bar {
     position: absolute;
     top: -1px; right: -1px;
+    padding-left: 0.125rem;
     border-radius: $radius-size-std;
     border: solid 1px $deep-sidebar;
     background-color: $bg;
