--- a/frontend/src/views/Main/ViewStacks/ImageDetailView/SideDrawer/style.module.scss
+++ b/frontend/src/views/Main/ViewStacks/ImageDetailView/SideDrawer/style.module.scss
@@ -9,23 +9,35 @@
   $padding: 0.75rem;
   $top-height: 3rem;
   > .top {
-    $real-height: 2.5rem;
+    $real-height: 2.25rem;
     position: absolute;
     top: #{$padding + $top-height - $real-height}; left: $padding; right: $padding; height: $real-height;
     box-sizing: border-box;
     border-bottom: solid 1px $deep-sidebar;
+    @media (prefers-color-scheme: dark) {
+      border-bottom-color: $deep-sidebar-dm;
+    }
   }
   > .left {
     position: absolute;
     top: #{$top-height + $padding}; left: $padding; right: 50%; bottom: 0;
+    overflow-y: auto;
+    padding: 1rem;
+    > .tag-item {
+      margin-bottom: 0.125rem;
+    }
   }
   > .mid-gap {
     position: absolute;
     border-left: solid 1px $deep-sidebar;
+    @media (prefers-color-scheme: dark) {
+      border-left-color: $deep-sidebar-dm;
+    }
     top: #{$top-height + $padding}; left: 50%; width: 0; bottom: $padding;
   }
   > .right {
     position: absolute;
     top: #{$top-height + $padding}; right: $padding; left: 50%; bottom: 0;
+    padding: 0.25rem;
   }
 }
