--- a/frontend/src/views/Main/view-stacks/ImageDetailView/SideDrawer/MetaTagPanel/style.module.scss
+++ b/frontend/src/views/Main/view-stacks/ImageDetailView/SideDrawer/MetaTagPanel/style.module.scss
@@ -38,13 +38,12 @@
   > .right-column {
     position: absolute;
     top: #{$top-height + $padding}; right: $padding; left: 50%; bottom: 0;
-    > .buttons {
-      height: $height-small;
-      margin: 0.25rem;
-    }
-    > .content {
-      height: calc(100% - #{$height-small + 0.25rem * 2});
-      width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+
+    > .meta-database {
+
     }
   }
 }
